--- a/index.html/first1.html
+++ b/index.html/first1.html
@@ -10,7 +10,7 @@
     <header>
         <h1>Our Products</h1>
         <nav>
-             <a href="index1.html">Home</a>
+             <a href="index.html">Home</a>
             <a href="first1.html">Products</a>
             <a href="second1.html">Contact</a>
         </nav>
