--- a/index.html/second1.html
+++ b/index.html/second1.html
@@ -36,7 +36,7 @@
     <label for="feedback">feedback</label>
     <textarea id="subject" name="subject" placeholder="Write something.." style="height:200px"></textarea>
 
-    <a href="index1.html">Submit</a>
+    <a href="index.html">Submit</a>
 
 
 
